syntax = "proto3";

package pb;

service lan_doh {
    rpc GetDirectory (GetDirectoryRequest) returns (GetDirectoryResponse);
    rpc GetFile (GetFileRequest) returns (stream GetFileResponse);
    rpc ListDirectories ( ListDirectoriesRequest ) returns ( ListDirectoriesResponse);
    rpc Healthz ( HealthzRequest ) returns ( HealthzResponse );
}

message ListDirectoriesRequest {}

message ListDirectoriesResponse {
    repeated Directory dirs = 1;
}

message GetDirectoryRequest {
    string name = 1;
}

message GetDirectoryResponse {
    repeated FileMetaData files = 1;
}

message GetFileRequest {
    string path = 1;
}

message GetFileResponse {
    oneof file_response {
        bytes chunk = 1;
        FileMetaData meta = 2;
    }
}

message FileMetaData {
    uint64 file_size = 1;
    string hash = 2;
    string path = 3;
}

message Directory {
    string name = 1;
    repeated string paths = 2;
}

message HealthzRequest {}

message HealthzResponse{
    bool EventListener = 1;
    bool Broadcaster = 2;
    string address = 3;
    string id = 4;
    string nickname = 5;
}